[package]
name = "clonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "4.5.4"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.155"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.3.9"